# tdLBCpp

./: .bazelrc  .clang-format  .clang-format-clion-example.xml  .gitignore  .gitmodules  .vimrc-clang-format-example  BUILD_GUIDE.md  BZLMOD_MIGRATION.md  CMakeLists.txt  CPP_IMPROVEMENTS.md  FORMATTING.md  MODULE.bazel  Makefile  QUICK_REFERENCE.md  README.md  WORKSPACE  build.sh  debugInput_gridx60_numSteps20.json  format-code.sh  generate_stirred_tank_input.py  inputJson_gridx60.json  input_debug_GEOM_FIX.json  input_debug_GEOM_FIX_GPU.json  input_debug_gridx104_IncreaseResolution_GPU.json  input_debug_gridx208_numSteps1000.json  input_debug_gridx60_numSteps20.json  input_debug_gridx64_numSteps20.json  input_debug_gridx72_IncreaseResolution.json  setup-dev.sh  spack.yaml  test.sh
docs/: Developer-Docs.md
src/: BaseParams.h  Boundary.hpp  Collision.hpp  CollisionEgglesSomers.hpp  CollisionEntropic.hpp  ComputeUnit.h  ComputeUnit.hpp  FlowParams.hpp  Forcing.hpp  GridParams.hpp  Header.h  Output.hpp  QVec.hpp  Streaming.hpp  StreamingEsoteric.hpp  StreamingNieve.hpp  main.cpp  template.py
src/Output/: OutputConfig.h  PlotDir.h
tdLBCpp/: main.cpp
tdLBCpp.xcodeproj/: project.pbxproj
tdLBCpp.xcodeproj/project.xcworkspace/xcuserdata/niallobroin.xcuserdatad/: UserInterfaceState.xcuserstate
tdLBCpp.xcodeproj/xcuserdata/niallobroin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
tdLBCpp.xcodeproj/xcuserdata/niallobroin.xcuserdatad/xcschemes/: xcschememanagement.plist
tdlbcpp/: CMakeLists.txt
tdlbcpp/src/: BUILD  BaseParams.h  Boundary.cuh  Boundary.hpp  CMakeLists.txt  CollisionEgglesSomers.cuh  CollisionEgglesSomers.hpp  CollisionEntropic.hpp  ComputeUnit.cu  ComputeUnit.cuh  ComputeUnit.h  ComputeUnit.hpp  ComputeUnitGpu.h  ComputeUnitGpu.hpp  ComputeUnitOutput.cuh  ComputeUnitOutput.hpp  ComputeUnitZig.h  ComputeUnitZig.hpp  ComputeUnit_formatter.py  DiskOutputTree.h  Field.hpp  FlowParams.hpp  Forcing.cuh  Forcing.hpp  GlobalStructures.hpp  GridParams.hpp  Header.h  Output.hpp  OutputConfig.h  PlotDir.h  PlotDirMeta.h  QVec.hpp  QVec.zig  QVecBinMeta.h  StreamingEsoTwist.cuh  StreamingEsoteric.hpp  StreamingNieve.cuh.gyb  StreamingNieve.hpp  StreamingSimple.cuh.gyb  StreamingSimple.hpp  (+7 more)
tdlbcpp/src/Output/: PlotDirMeta.h
tdlbcpp/src/Params/: Angle.hpp  AngleParams.hpp  BUILD  BinFile.hpp  BinFileParams.hpp  Checkpoint.hpp  CheckpointParams.hpp  ComputeUnitParams.hpp  Flow.hpp  FlowParams.hpp  Grid.hpp  GridParams.hpp  OrthoPlane.hpp  OrthoPlaneParams.hpp  OrthoPlaneVorticityParams.hpp  OutputData.hpp  OutputParams.hpp  Params.py  Params_template.py  PlaneAtAngle.hpp  PlaneAtAngleParams.hpp  Running.hpp  RunningParams.hpp  Sector.hpp  SectorParams.hpp  Volume.hpp  VolumeParams.hpp  json.h
tdlbcpp/src/Tools/: BUILD  toojpeg.cpp  toojpeg.h
tdlbcpp/src/zig/: BUILD  Boundary.zig  CollisionEgglesSomers.zig  ComputeUnit.zig  ComputeUnitIntf.zig  Forcing.zig  GeomPolar.zig  QVec.zig
tdlbcpp/tests/: BUILD  ComputeUnitCheckpointTest.cpp  ComputeUnitMemoryTest.cpp  DiskOutputTreeTest.cpp  StreamingNieveGpuTest.cpp  StreamingNievePushTest.hpp  StreamingNieveTest.cpp  StreamingNieveTest.hpp  StreamingSimpleGpuTest.cpp  StreamingSimpleGpuTestLib.cpp  StreamingSimpleTest.cpp  test.cpp  utils.cpp  utils.hpp
tdlbcpp/tests/Params/: BUILD  BinFileTest.cpp  CheckpointTest.cpp  ComputeUnitParamsTest.cpp  FlowTest.cpp  GridTest.cpp  OutputParamsTest.cpp  ParamsCommon.cpp  ParamsCommon.hpp  RunningTest.cpp
testComputeUnit/: testComputeUnit.mm  testJsonFiles.mm
tests/: test.cpp
